--- a/templates.html
+++ b/templates.html
@@ -1,10 +1,22 @@
 <template name="facebookLike">
-     <div class="fb-like" data-send="true" data-width="{{width}}" data-show-faces="{{faces}}" data-action="{{action}}" data-colorscheme={{colorscheme}} data-href="{{href}}" data-kid-directed-site={{kid}} data-layout="{{layout}}" data-ref="{{ref}}" data-share="{{share}}"></div>
+    <div 
+      class="fb-like" 
+      data-send="true" 
+      data-width="{{width}}" 
+      data-show-faces="{{faces}}" 
+      data-action="{{action}}" 
+      data-colorscheme={{colorscheme}} 
+      data-href="{{href}}" 
+      data-kid-directed-site={{kid}} 
+      data-layout="{{layout}}" 
+      data-ref="{{ref}}" 
+      data-share="{{share}}">
+    </div>
+
 </template>
 
 <template name="facebookShare">
-    <div class="fb-share-button" data-href="{{href}}" data-type="{{type}}" data-width="{{width}}"></div>
-
+    <div class="fb-share-button" data-href="{{href}}" data-width="{{width}}"></div>
 </template>
 
 <template name="facebookPost">
